# langchain

./: README.md
01_models_prompts_and_parsers/: README.md  main.py  pyproject.toml
01_models_prompts_and_parsers/core/: config.py
01_models_prompts_and_parsers/services/: gemini_service.py
